fixed layout on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3902,3 +3902,39 @@ input, select, textarea {
 			}
 
 		}
+
+.center {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.tools-list {
+	position:relative;
+	display:flex;
+	flex-wrap:wrap;
+	padding:0;
+	margin-bottom: 10px;
+	list-style: none;
+}
+
+.tools-list li {
+	white-space: nowrap;
+	padding: 0;
+	font-size: 14px;
+	color: rgb(136,146,176);
+	margin-right: 20px;
+	margin-bottom: 7px;
+}
+
+.description-text {
+	padding: 20px 20px 0 0;
+}
+
+.buttons a {
+	margin-left: 16px;
+}
+
+.buttons a:nth-child(1){
+	margin-left: 0px;
+}
